# g1_mj_description

./: CMakeLists.txt  README.md
mc_mujoco/: g1.in.yaml
xml/: g1_23dof.xml  g1_29dof.xml
